--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@ body {
 <li><i class="fas fa-phone fa-fw"></i> 手机：15198044376</li>
 <li><i class="fas fa-camera-retro fa-fw"></i> 邮件：jiangtianyu2008@gmail.com</li>
 <li><i class="fab fa-weixin fa-fw"></i> 微信：jiangtianyu2009</li>
-<li><i class="fab fa-wordpress fa-fw"></i> 博客：<a href="https://www.jiangtianyu.ga">www.jiangtianyu.ga</a></li>
+<li><i class="fab fa-wordpress fa-fw"></i> 博客：<a href="https://www.jiangtianyu.xyz">www.jiangtianyu.xyz</a></li>
 <li><i class="fab fa-github fa-fw"></i> Github：<a href="https://github.com/jiangtianyu2009">github.com/jiangtianyu2009</a></li>
 </ul>
 <hr />
