--- a/resume.html
+++ b/resume.html
@@ -1,338 +1,54 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>resume</title>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<style type="text/css">
-/* GitHub stylesheet for MarkdownPad (http://markdownpad.com) */
-/* Author: Nicolas Hery - http://nicolashery.com */
-/* Version: b13fe65ca28d2e568c6ed5d7f06581183df8f2ff */
-/* Source: https://github.com/nicolahery/markdownpad-github */
-
-/* RESET
-=============================================================================*/
-
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-}
-
-/* BODY
-=============================================================================*/
-
-body {
-  font-family: Helvetica, arial, freesans, clean, sans-serif;
-  font-size: 14px;
-  line-height: 1.6;
-  color: #333;
-  background-color: #fff;
-  padding: 20px;
-  max-width: 960px;
-  margin: 0 auto;
-}
-
-body>*:first-child {
-  margin-top: 0 !important;
-}
-
-body>*:last-child {
-  margin-bottom: 0 !important;
-}
-
-/* BLOCKS
-=============================================================================*/
-
-p, blockquote, ul, ol, dl, table, pre {
-  margin: 15px 0;
-}
-
-/* HEADERS
-=============================================================================*/
-
-h1, h2, h3, h4, h5, h6 {
-  margin: 20px 0 10px;
-  padding: 0;
-  font-weight: bold;
-  -webkit-font-smoothing: antialiased;
-}
-
-h1 tt, h1 code, h2 tt, h2 code, h3 tt, h3 code, h4 tt, h4 code, h5 tt, h5 code, h6 tt, h6 code {
-  font-size: inherit;
-}
-
-h1 {
-  font-size: 28px;
-  color: #000;
-}
-
-h2 {
-  font-size: 24px;
-  border-bottom: 1px solid #ccc;
-  color: #000;
-}
-
-h3 {
-  font-size: 18px;
-}
-
-h4 {
-  font-size: 16px;
-}
-
-h5 {
-  font-size: 14px;
-}
-
-h6 {
-  color: #777;
-  font-size: 14px;
-}
-
-body>h2:first-child, body>h1:first-child, body>h1:first-child+h2, body>h3:first-child, body>h4:first-child, body>h5:first-child, body>h6:first-child {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-a:first-child h1, a:first-child h2, a:first-child h3, a:first-child h4, a:first-child h5, a:first-child h6 {
-  margin-top: 0;
-  padding-top: 0;
-}
-
-h1+p, h2+p, h3+p, h4+p, h5+p, h6+p {
-  margin-top: 10px;
-}
-
-/* LINKS
-=============================================================================*/
-
-a {
-  color: #4183C4;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-/* LISTS
-=============================================================================*/
-
-ul, ol {
-  padding-left: 30px;
-}
-
-ul li > :first-child, 
-ol li > :first-child, 
-ul li ul:first-of-type, 
-ol li ol:first-of-type, 
-ul li ol:first-of-type, 
-ol li ul:first-of-type {
-  margin-top: 0px;
-}
-
-ul ul, ul ol, ol ol, ol ul {
-  margin-bottom: 0;
-}
-
-dl {
-  padding: 0;
-}
-
-dl dt {
-  font-size: 14px;
-  font-weight: bold;
-  font-style: italic;
-  padding: 0;
-  margin: 15px 0 5px;
-}
-
-dl dt:first-child {
-  padding: 0;
-}
-
-dl dt>:first-child {
-  margin-top: 0px;
-}
-
-dl dt>:last-child {
-  margin-bottom: 0px;
-}
-
-dl dd {
-  margin: 0 0 15px;
-  padding: 0 15px;
-}
-
-dl dd>:first-child {
-  margin-top: 0px;
-}
-
-dl dd>:last-child {
-  margin-bottom: 0px;
-}
-
-/* CODE
-=============================================================================*/
-
-pre, code, tt {
-  font-size: 12px;
-  font-family: Consolas, "Liberation Mono", Courier, monospace;
-}
-
-code, tt {
-  margin: 0 0px;
-  padding: 0px 0px;
-  white-space: nowrap;
-  border: 1px solid #eaeaea;
-  background-color: #f8f8f8;
-  border-radius: 3px;
-}
-
-pre>code {
-  margin: 0;
-  padding: 0;
-  white-space: pre;
-  border: none;
-  background: transparent;
-}
-
-pre {
-  background-color: #f8f8f8;
-  border: 1px solid #ccc;
-  font-size: 13px;
-  line-height: 19px;
-  overflow: auto;
-  padding: 6px 10px;
-  border-radius: 3px;
-}
-
-pre code, pre tt {
-  background-color: transparent;
-  border: none;
-}
-
-kbd {
-    -moz-border-bottom-colors: none;
-    -moz-border-left-colors: none;
-    -moz-border-right-colors: none;
-    -moz-border-top-colors: none;
-    background-color: #DDDDDD;
-    background-image: linear-gradient(#F1F1F1, #DDDDDD);
-    background-repeat: repeat-x;
-    border-color: #DDDDDD #CCCCCC #CCCCCC #DDDDDD;
-    border-image: none;
-    border-radius: 2px 2px 2px 2px;
-    border-style: solid;
-    border-width: 1px;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
-    line-height: 10px;
-    padding: 1px 4px;
-}
-
-/* QUOTES
-=============================================================================*/
-
-blockquote {
-  border-left: 4px solid #DDD;
-  padding: 0 15px;
-  color: #777;
-}
-
-blockquote>:first-child {
-  margin-top: 0px;
-}
-
-blockquote>:last-child {
-  margin-bottom: 0px;
-}
-
-/* HORIZONTAL RULES
-=============================================================================*/
-
-hr {
-  clear: both;
-  margin: 15px 0;
-  height: 0px;
-  overflow: hidden;
-  border: none;
-  background: transparent;
-  border-bottom: 4px solid #ddd;
-  padding: 0;
-}
-
-/* TABLES
-=============================================================================*/
-
-table th {
-  font-weight: bold;
-}
-
-table th, table td {
-  border: 1px solid #ccc;
-  padding: 6px 13px;
-}
-
-table tr {
-  border-top: 1px solid #ccc;
-  background-color: #fff;
-}
-
-table tr:nth-child(2n) {
-  background-color: #f8f8f8;
-}
-
-/* IMAGES
-=============================================================================*/
-
-img {
-  max-width: 100%
-}
-</style>
+  <title>resume</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <script src="https://kit.fontawesome.com/052a0e8a80.js" crossorigin="anonymous"></script>
 </head>
-<body>
-<hr />
-<h1>个人信息</h1>
-<ul>
-<li><i class="fas fa-id-card fa-fw"></i> 蒋天宇/男/1991</li>
-<li><i class="fas fa-phone fa-fw"></i> 手机：15198044376</li>
-<li><i class="fas fa-camera-retro fa-fw"></i> 邮件：jiangtianyu2008@gmail.com</li>
-<li><i class="fab fa-weixin fa-fw"></i> 微信：jiangtianyu2009</li>
-<li><i class="fab fa-wordpress fa-fw"></i> 博客：<a href="https://www.jiangtianyu.xyz">www.jiangtianyu.xyz</a></li>
-<li><i class="fab fa-github fa-fw"></i> Github：<a href="https://github.com/jiangtianyu2009">github.com/jiangtianyu2009</a></li>
-</ul>
-<hr />
-<h1>教育经历</h1>
-<ul>
-<li><i class="fas fa-graduation-cap fa-fw"></i> 硕士 四川大学 软件工程专业 2013~2016</li>
-<li><i class="fas fa-graduation-cap fa-fw"></i> 本科 四川大学 软件工程专业 2009~2013</li>
-</ul>
-<hr />
-<h1>工作经历</h1>
-<h2><i class="far fa-building fa-fw"></i> EMC公司  (2016.07 – 至今)</h2>
-<h3><i class="far fa-bookmark fa-fw"></i> 存储系统持续测试执行环境</h3>
-<p>此项目的主要作用是提高存储系统在测试时的使用效率，合理分配大量测试用例在50台存储系统上的执行并收集结果。我在项目中负责存储系统安装升级和数据迁移部分的自动化相关工作。系统显著提高了存储系统使用效率，减少了测试人员需要手动配置和执行的工作量。
-除此之外，我还根据系统在使用过程中的实际情况单独开发了一款Chrome浏览器插件，原本从Jenkins到查看测试用例执行日志需要点击4~5次鼠标，跳转多个页面，现在缩短为一次点击，得到同事一致好评。</p>
-<h3><i class="far fa-bookmark fa-fw"></i> 业余项目</h3>
-<p>实验性Web项目：通过搭建REST服务，并运用Github Webhooks和Gunicorn自动reload功能，实现了一次Git Push即可自动更新部署Flask Web应用。具体内容可参考博客中的Auto Deploy Flask APP文章。<br />
-爬虫项目：通过结合Travis CI和Scrapinghub提供的服务，实现了定时重复执行爬虫，免费且无需耗费任何本地资源。</p>
-<h2><i class="far fa-building fa-fw"></i> 声泰特科技有限公司  (2014.06 – 2015.06)</h2>
-<h3><i class="far fa-bookmark fa-fw"></i> 超声工作站软件</h3>
-<p>新版超声工作站软件，主要有病例管理，图像采集，报告生成等功能，目前已商用。开发语言为C#和C++，工具为Visual Studio，基于WPF + AvalonDock框架和Access数据库。
-工作内容与贡献：完成新版软件的架构设计和界面设计，除保留原系统的视频传输功能外，重新开发了病例管理，图像采集，视频采集，报告编辑打印等大部分功能。</p>
-<hr />
-<h1>技能清单</h1>
-<p>以下均为我熟练使用的技能</p>
-<ul>
-<li><i class="fab fa-python fa-fw"></i> 语言：Python/Perl/C#</li>
-<li><i class="fab fa-vuejs fa-fw"></i> Web：Flask/Gunicorn/Nginx</li>
-<li><i class="fas fa-code-branch fa-fw"></i> 版本控制：Git/SVN</li>
-<li><i class="fab fa-slack-hash fa-fw"></i> 自动化：Jenkins/Travis CI/Slack/Saucelabs</li>
-<li><i class="fab fa-slideshare fa-fw"></i> 爬虫：Scrapy/Scrapinghub</li>
-<li><i class="fab fa-mixcloud fa-fw"></i> 云服务：GAE/Vultr</li>
-</ul>
-<hr />
 
+<body>
+  <h1>个人信息</h1>
+  <ul>
+    <li><i class="fas fa-id-card fa-fw"></i> 蒋天宇/男/1991</li>
+    <li><i class="fas fa-phone fa-fw"></i> 手机：17348085220</li>
+    <li><i class="fas fa-camera-retro fa-fw"></i> 邮件：jiangtianyu2009@hotmail.com</li>
+    <li><i class="fab fa-weixin fa-fw"></i> 微信：jiangtianyu2009</li>
+    <li><i class="fab fa-wordpress fa-fw"></i> 博客：<a href="https://www.jiangtianyu.xyz">www.jiangtianyu.xyz</a></li>
+  </ul>
+  <hr />
+  <h1>教育经历</h1>
+  <ul>
+    <li><i class="fas fa-graduation-cap fa-fw"></i> 硕士 四川大学 软件工程专业 2013~2016</li>
+    <li><i class="fas fa-graduation-cap fa-fw"></i> 本科 四川大学 软件工程专业 2009~2013</li>
+  </ul>
+  <hr />
+  <h1>工作经历</h1>
+  <h2><i class="far fa-building fa-fw"></i> EMC公司 (2016.07 – 至今)</h2>
+  <h3><i class="far fa-bookmark fa-fw"></i> 存储系统持续测试执行环境</h3>
+  <p>
+    此项目的主要作用是提高存储系统在测试时的使用效率，合理分配大量测试用例在50台存储系统上的执行并收集结果。我在项目中负责存储系统安装升级和数据迁移部分的自动化相关工作。系统显著提高了存储系统使用效率，减少了测试人员需要手动配置和执行的工作量。
+    除此之外，我还根据系统在使用过程中的实际情况单独开发了一款Chrome浏览器插件，原本从Jenkins到查看测试用例执行日志需要点击4~5次鼠标，跳转多个页面，现在缩短为一次点击，得到同事一致好评。</p>
+  <h3><i class="far fa-bookmark fa-fw"></i> 业余项目</h3>
+  <p>实验性Web项目：通过搭建REST服务，并运用Github Webhooks和Gunicorn自动reload功能，实现了一次Git Push即可自动更新部署Flask Web应用。具体内容可参考博客中的Auto Deploy
+    Flask APP文章。<br />
+    爬虫项目：通过结合Travis CI和Scrapinghub提供的服务，实现了定时重复执行爬虫，免费且无需耗费任何本地资源。</p>
+  <h2><i class="far fa-building fa-fw"></i> 声泰特科技有限公司 (2014.06 – 2015.06)</h2>
+  <h3><i class="far fa-bookmark fa-fw"></i> 超声工作站软件</h3>
+  <p>新版超声工作站软件，主要有病例管理，图像采集，报告生成等功能，目前已商用。开发语言为C#和C++，工具为Visual Studio，基于WPF + AvalonDock框架和Access数据库。
+    工作内容与贡献：完成新版软件的架构设计和界面设计，除保留原系统的视频传输功能外，重新开发了病例管理，图像采集，视频采集，报告编辑打印等大部分功能。</p>
+  <hr />
+  <h1>技能清单</h1>
+  <p>以下均为我熟练使用的技能</p>
+  <ul>
+    <li><i class="fab fa-python fa-fw"></i> 语言：Python/Perl/C#</li>
+    <li><i class="fab fa-vuejs fa-fw"></i> Web：Flask/Gunicorn/Nginx</li>
+    <li><i class="fas fa-code-branch fa-fw"></i> 版本控制：Git/SVN</li>
+    <li><i class="fab fa-slack-hash fa-fw"></i> 自动化：Jenkins/Travis CI/Slack/Saucelabs</li>
+    <li><i class="fab fa-slideshare fa-fw"></i> 爬虫：Scrapy/Scrapinghub</li>
+    <li><i class="fab fa-mixcloud fa-fw"></i> 云服务：GAE/Vultr</li>
+  </ul>
+  <hr />
 </body>
+
 </html>
-<!-- This document was created with MarkdownPad, the Markdown editor for Windows (http://markdownpad.com) -->
