--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>resume</title>
+  <title>Resume of JTY</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <script src="https://kit.fontawesome.com/052a0e8a80.js" crossorigin="anonymous"></script>
 </head>
@@ -24,7 +24,7 @@
   </ul>
   <hr />
   <h1>工作经历</h1>
-  <h2><i class="far fa-building fa-fw"></i> EMC公司 (2016.07 – 至今)</h2>
+  <h2><i class="far fa-building fa-fw"></i> Dell EMC (2016.07 – 至今)</h2>
   <h3><i class="far fa-bookmark fa-fw"></i> 存储系统持续测试执行环境</h3>
   <p>
     此项目的主要作用是提高存储系统在测试时的使用效率，合理分配大量测试用例在50台存储系统上的执行并收集结果。我在项目中负责存储系统安装升级和数据迁移部分的自动化相关工作。系统显著提高了存储系统使用效率，减少了测试人员需要手动配置和执行的工作量。
@@ -42,13 +42,13 @@
   <p>以下均为我熟练使用的技能</p>
   <ul>
     <li><i class="fab fa-python fa-fw"></i> 语言：Python/Perl/C#</li>
-    <li><i class="fab fa-vuejs fa-fw"></i> Web：Flask/Gunicorn/Nginx</li>
+    <li><i class="fab fa-vuejs fa-fw"></i> Web：Vue/Flask/Gunicorn/Nginx</li>
     <li><i class="fas fa-code-branch fa-fw"></i> 版本控制：Git/SVN</li>
-    <li><i class="fab fa-slack-hash fa-fw"></i> 自动化：Jenkins/Travis CI/Slack/Saucelabs</li>
+    <li><i class="fab fa-slack-hash fa-fw"></i> 自动化：Jenkins/Travis CI/Salt/Puppet</li>
     <li><i class="fab fa-slideshare fa-fw"></i> 爬虫：Scrapy/Scrapinghub</li>
     <li><i class="fab fa-mixcloud fa-fw"></i> 云服务：GAE/Vultr</li>
   </ul>
-  <hr />
+
 </body>
 
 </html>
