--- a/rc81_test.html
+++ b/rc81_test.html
@@ -280,6 +280,8 @@
         <!--begin 7162312-56319-1-->
         <ul>
           <li><a href="http://81rc.81.cn/news/2020-12/16/content_9953425.htm"
+              target="_blank">公司东方红东方红饭店三个函数的风格十分赶得上</a></li>
+          <li><a href="http://81rc.81.cn/news/2020-12/16/content_9953425.htm"
               target="_blank">jjjjkjjkkkkkkkddddddddddddddddddddddddk</a></li>
           <li><a href="http://81rc.81.cn/news/2020-12/16/content_9953425.htm"
               target="_blank">公示联勤保障部队2020年招考文职人员拟录用对象名单</a></li>
@@ -293,8 +295,6 @@
               target="_blank">2020年国防大学公开招考专业技能岗位文职人员公告</a></li>
           <li><a href="http://81rc.81.cn/news/2020-11/16/content_9937008.htm"
               target="_blank">2020年军委后勤保障部招考专业技能岗位文职人员公告</a></li>
-          <li><a href="http://81rc.81.cn/news/2020-10/23/content_9923372.htm"
-              target="_blank">2020年面向社会公开招考文职人员统一考试入围人员名单</a></li>
         </ul>
         <!--end 7162312-56319-1-->
       </div>
