--- a/rc81_test.html
+++ b/rc81_test.html
@@ -280,6 +280,8 @@
         <!--begin 7162312-56319-1-->
         <ul>
           <li><a href="http://81rc.81.cn/news/2020-12/16/content_9953425.htm"
+              target="_blank">的风格和积极健康急急急急急急斤斤计较经济界牛牛牛牛牛买买买</a></li>
+          <li><a href="http://81rc.81.cn/news/2020-12/16/content_9953425.htm"
               target="_blank">是个大帅哥法国岁的法国但是公司的公司的是个大帅哥时感到附属国</a></li>
           <li><a href="http://81rc.81.cn/news/2020-12/16/content_9953425.htm"
               target="_blank">好几个客户价格和采购v和工行股份过户i规划局皇家空军海军</a></li>
@@ -293,8 +295,6 @@
               target="_blank">公布海军博物馆2020年招聘技能文职理论考试入围名单</a></li>
           <li><a href="http://81rc.81.cn/news/2020-11/25/content_9942367.htm"
               target="_blank">2020年军事科学院公开招考专业技能岗位文职人员公告</a></li>
-          <li><a href="http://81rc.81.cn/news/2020-11/18/content_9938160.htm"
-              target="_blank">2020年战略支援部队公开招考专业技能岗位文职人员公告</a></li>
         </ul>
         <!--end 7162312-56319-1-->
       </div>
